[package]
name = "pstd"
version = "0.1.0"
edition = "2021"

[features]
default = []
game = []

[dependencies]
ahash = { version = "*", features = ["serde"] }
anyhow = "*"
chrono = { version = "*", features = ["serde"] }
closure = "*"
flume = { version = "*", features = ["async", "select"] }
futures = "*"
log = "*"
parking_lot = "*"
rand = { version = "*", features = ["log"] }
fastrand = "*"
rayon = "*"
scc = { version = "*", features = ["serde"] }
relative-path = { version = "*", features = ["serde"] }
