[package]
name = "pstd"
version = "0.3.0"
edition = "2021"

[features]
default = ["log", "rand"]
async = ["flume/async", "dep:futures"]
game = ["dep:glam", "noise"]
image = ["dep:image", "noise/images"]
log = ["dep:log", "rand/log"]
nightly = ["parking_lot/nightly", "rand/nightly", "rand/simd_support"]
noise = ["dep:noise"]
rand = ["dep:fastrand", "dep:rand", "glam/rand"]
serde = [
    "ahash/serde",
    "chrono/serde",
    "glam/serde",
    "parking_lot/serde",
    "relative-path/serde",
    "scc/serde",
]

[dependencies]
ahash = "0.8"
anyhow = "1.0"
chrono = "0.4"
closure = "0.3"
fastrand = { version = "2.3", optional = true }
flume = { version = "0.11", features = ["select"] }
futures = { version = "0.3", optional = true }
# glam fast-math could cause some platform inequality
glam = { version = "0.30", features = ["fast-math"], optional = true }
image = { version = "0.25", optional = true }
log = { version = "0.4", optional = true }
noise = { version = "0.9", optional = true }
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
rand = { version = "0.9", optional = true }
relative-path = "2.0"
rayon = "1.10"
scc = { version = "2.3", features = ["serde"] }
